fix footer bar that covered the bottom content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,8 +13,13 @@ body {
 		bottom: 0;
 		width: 100%;
 		color: white;
-		text-align: center;
-	 
+		text-align: center; 
+}
+
+#content {
+	width: 100%;
+    margin: 0 auto;
+    padding: 60px 0;
 }
 
 #page_title {
